# template-modern-python-package

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  docs.yml  pr-title.yml
{{cookiecutter.project_slug}}/docs/: getting-started.md  index.md
{{cookiecutter.project_slug}}/docs/reference/: index.md
