[project]
name = "{{cookiecutter.project_slug}}"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = "=={{cookiecutter.python_version}}.*"
authors = [{ name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }]
dependencies = []

[dependency-groups]
dev = [
  "pytest",
  "ruff",
{%- if cookiecutter.use_ty %}
  "ty",
{%- endif %}
]
{%- if cookiecutter.include_docs %}
docs = [
  "mkdocs-git-revision-date-localized-plugin>=1.5.1",
  "mkdocs-material>=9.6.20",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocstrings[python]>=0.30.1",
]
{%- endif %}

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.package_name}}"]

[tool.ruff]
line-length = 100
target-version = "py{{cookiecutter.python_version|replace('.', '')}}"
lint.select = [
{%- if cookiecutter.linter_rules_core %}
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "PLE",    # pylint errors
    "PLC",    # pylint conventions
{%- endif %}
{%- if cookiecutter.linter_rules_imports %}
    "I001",   # isort - unsorted imports
{%- endif %}
{%- if cookiecutter.linter_rules_typing %}
    "ANN",    # flake8-annotations
{%- endif %}
{%- if cookiecutter.linter_rules_modernization %}
    "UP",     # pyupgrade
    "PTH",    # flake8-use-pathlib
{%- endif %}
{%- if cookiecutter.linter_rules_testing %}
    "PT",     # flake8-pytest
{%- endif %}
{%- if cookiecutter.linter_rules_cleanup %}
    "ERA",    # eradicate - commented out code
    "T20",    # flake8-print
{%- endif %}
{%- if cookiecutter.linter_rules_practices %}
    "RET",    # flake8-return
    "ASYNC",  # flake8-async
    "DTZ",    # flake8-datetimez
{%- endif %}
]
lint.ignore = [
{%- if cookiecutter.linter_rules_typing %}
    "ANN002",  # Missing type annotation for *args
    "ANN003"   # Missing type annotation for **kwargs
{%- endif %}
]
src = ["src"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.9.0"